[package]
name = "new-task"
version = "0.1.0"
edition = "2021"

[dependencies]
big_s = "1.0.2"
dateparser = "0.1.6"
chrono = "0.4.19"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.11"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.clap]
version = "3.1.6"
features = ["derive"]
