[package]
name = "wbs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json", "serde_json"] }
tokio = { version = "1", features = ["full"]}
serde_json = { version = "1" }
serde = { version = "1" }
envy = "0.4.2"
serde_derive = "1.0.136"
maplit = "1.0.2"
big_s = "1.0.2"
futures = "0.3.21"
